fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 
 .container {
     padding: 5%;
+    overflow: hidden;
 }
 
 .flex{
@@ -184,6 +185,12 @@ body {
     width: 100%;
     height: 30em;
     background-color: white;
+}
+
+@media (min-width: 900px) {
+    .swiper{
+        height: 50em;
+    }
 }
 
 .swiper-slide{
